<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2016 Google Inc.

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
    <string name="app_name">TBCheck</string>
    <string name="show_depth" translatable="false">Show Depth</string>
    <string name="hide_depth" translatable="false">Hide Depth</string>
    <string name="depth_not_available" translatable="false">Depth Not Available</string>
    <string name="depth">1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kacha">kacha</string>
    <string name="action_login">Sign in</string>
    <string name="register">Register</string>
    <string name="id">ID</string>
    <string name="email">lionggele40@gmail.com</string>
    <string name="ic_passport_title">IC/Passport No.</string>
    <string name="ic_passport">020517xxxxxxx</string>
    <string name="nationality_title">Nationality</string>
    <string name="nationality">Malaysian</string>
    <string name="home">Home</string>
    <string name="camera">Camera</string>
    <string name="information">Information</string>
    <string name="tuberculosis">Tuberculosis</string>
    <string name="page_description">Page Description</string>
    <string name="channel_name">Reminder Notifications</string>
    <string name="channel_description">Notifications for reminders set within the app.</string>
</resources>
