<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/arrow_left"
        android:contentDescription="Back"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/grey_circle"
        android:contentDescription="settings"
        android:padding="6dp"
        android:src="@drawable/ic_setting"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/ProfileScreenTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="22dp"
        android:font="@font/nunitobold"
        android:fontFamily="@font/nunitobold"
        android:text="Personal Details"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/profile_picture"
        android:layout_below="@id/ProfileScreenTitleText"
        android:layout_marginTop="24dp"
        android:layout_centerHorizontal="true" />
    <androidx.cardview.widget.CardView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        android:layout_below="@id/profilePhoto"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            tools:ignore="TextSizeCheck,VisualLintBounds">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userID_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/userID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosemibold"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/IC_passport_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ic_passport_title" />

                <TextView
                    android:id="@+id/IC_passport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/ic_passport" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosemibold"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nationality_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nationality_title" />

                <TextView
                    android:id="@+id/nationality"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/nationality" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardPatientRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile"
        android:layout_margin="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/card_bg"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="369dp"
            android:padding="16dp">
            <TextView
                android:id="@+id/tvPatientRecordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Patient Record"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>