<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.google.ar.core.codelab.fragment.TuberFragment">

    <FrameLayout
        android:id="@+id/fragment_tuberculosis"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"/>

        <TextView
        android:id="@+id/TuberculosisScreenText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:font="@font/nunitobold"
        android:fontFamily="@font/nunitobold"
        android:text="Tuberculosis"
        android:textAlignment="center"
        android:textColor="@color/secondary_color"
        android:textSize="25sp"
        android:typeface="normal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@id/TuberculosisScreenText"
        android:layout_centerHorizontal="true"
        android:src="@drawable/profile_picture"
        app:layout_constraintTop_toBottomOf="@id/TuberculosisScreenText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/profilePhoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="361dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userID_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/id" />

                <TextView
                    android:id="@+id/userID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/email" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunitosemibold"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/IC_passport_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ic_passport_title" />

                <TextView
                    android:id="@+id/IC_passport"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/ic_passport" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/backgroundCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/resultTitle"
        android:background="@drawable/card_bg">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="50dp">
        </FrameLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/riskStatusCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#8ACF82"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="@+id/backgroundCard"
        app:layout_constraintStart_toStartOf="@+id/backgroundCard"
        app:layout_constraintEnd_toStartOf="@+id/vaccinationCard"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/riskStatustext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Risk Status:\n No Contact"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:padding="16dp" />
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/vaccinationCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:cardBackgroundColor="#FF8673"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toTopOf="@+id/backgroundCard"
        app:layout_constraintStart_toEndOf="@+id/riskStatusCard"
        app:layout_constraintEnd_toEndOf="@+id/backgroundCard"
        app:layout_constraintHorizontal_bias="0.5">

        <TextView
            android:id="@+id/VaccinationText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Vaccination:\nUndone"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:padding="16dp" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/resultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Tutorial"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toBottomOf="@id/backgroundCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="5dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:layout_constraintTop_toBottomOf="@id/resultTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/picturesButton"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:background="@drawable/buttoncard_bg"
                android:padding="10dp"
                android:src="@drawable/ic_camera"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textPositives"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/picturesButton"
                android:text="Positives"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textDiameter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textPositives"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/picturesButton"
                android:text="Diameter"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textElaboration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/textDiameter"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/picturesButton"
                android:text="Elaboration"
                android:textSize="16sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>




</androidx.constraintlayout.widget.ConstraintLayout>
